[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/TimesNewPixel/TimesNewPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/staticButton.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.0627451, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.964706, 0.858824, 0.729412, 1 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.368627, 0.12549, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.454902, 0.788235, 0.619608, 1 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.694118, 0.2, 0.32549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.964706, 0.858824, 0.729412, 1 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.368627, 0.12549, 0.321569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.964706, 0.858824, 0.729412, 1 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.152941, 0.0941176, 0.329412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.454902, 0.788235, 0.619608, 1 )
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 1

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 7 )
script = ExtResource( 2 )

[node name="CR" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="PC" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 291.0
margin_bottom = 191.0
custom_constants/separation = 10

[node name="HBC1" type="HBoxContainer" parent="PC/VBC"]
margin_right = 284.0
margin_bottom = 28.0

[node name="L" type="Label" parent="PC/VBC/HBC1"]
margin_right = 80.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="PC/VBC/HBC1"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 9.0
value = 7.0
tick_count = 10
ticks_on_borders = true

[node name="HBC2" type="HBoxContainer" parent="PC/VBC"]
margin_top = 38.0
margin_right = 284.0
margin_bottom = 66.0

[node name="L" type="Label" parent="PC/VBC/HBC2"]
margin_right = 80.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 0 )
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="PC/VBC/HBC2"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 9.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="HBC3" type="HBoxContainer" parent="PC/VBC"]
margin_top = 76.0
margin_right = 284.0
margin_bottom = 104.0

[node name="L" type="Label" parent="PC/VBC/HBC3"]
margin_right = 242.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Debug Menu :D"

[node name="DebugCheckBox" type="CheckBox" parent="PC/VBC/HBC3"]
margin_left = 246.0
margin_right = 270.0
margin_bottom = 28.0

[node name="Control" type="Control" parent="PC/VBC/HBC3"]
margin_left = 274.0
margin_right = 284.0
margin_bottom = 28.0
rect_min_size = Vector2( 10, 0 )

[node name="HSeparator" type="HSeparator" parent="PC/VBC"]
margin_top = 114.0
margin_right = 284.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 20 )

[node name="Button" type="Button" parent="PC/VBC"]
margin_left = 118.0
margin_top = 144.0
margin_right = 165.0
margin_bottom = 164.0
size_flags_horizontal = 4
text = "Close"

[node name="Control" type="Control" parent="PC/VBC"]
margin_top = 174.0
margin_right = 284.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 10 )

[node name="SampleSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"
[connection signal="gui_input" from="CR" to="." method="_on_CR_gui_input"]
[connection signal="value_changed" from="PC/VBC/HBC1/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="PC/VBC/HBC2/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="PC/VBC/HBC3/DebugCheckBox" to="." method="_on_DebugCheckBox_toggled"]
[connection signal="pressed" from="PC/VBC/Button" to="." method="_on_Button_pressed"]
